mdapipkg/unpackaged/objects/AnalyticsEvent__c.object
<CustomObject>
    <fields>
        <fullName>dataset_name__c</fullName>
        <label>Dataset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fields__c</fullName>
        <label>fields</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selection__c</fullName>
        <label>selection</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>step__c</fullName>
        <label>step</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AnalyticsEvent</label>
    <nameField>
        <label>AnalyticsEvent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnalyticsEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>